@@ -1,4 +1,4 @@
-nclones <-
+nclones.default <-
 function(x, ...)
 {
     attr(x, "n.clones")
